tests/fail/test_specified_float_encoding.nim
import ../../protobuf_serialization

type SpecifiedFloatEncoding = object
  x {.fixed, fieldNumber: 1.}: float32

discard Protobuf.encode(SpecifiedFloatEncoding())
